6/17/10 change strength range: 1e-10 to 1e2
6/17/10 change concentration units from "M" to "mol/L"
6/15/10 set a background color for the control panel
# 0.00.12 (41734) Jun 15, 2010
6/15/10 dev version with all change requests from 6/15/10 meeting
6/15/10 increase height of concentration graph to fill the beaker
6/15/10 make order of bars in concentration graph match order of molecules in reaction equations
6/15/10 change range of concentration graph's y axis to 1e-8 to 1e2
6/15/10 hide molecule symbols & icons below bars in concentration graph
6/15/10 swap order of check boxes and radio buttons in Tools control panel
6/15/10 disconnect concentration graph from "Show Water" control, always show H2O bar in graph (except for strong base)
6/15/10 new reaction equation for water, 2H2O <-> H30+ + OH-
6/15/10 change order of molecules in reaction equations
6/15/10 use strength=1e-7 for weak acid and weak base in "Test Solution" tab
6/15/10 remove all references to Ka and Kb in "Custom Solution" tab
# 0.00.11 (41670) Jun 14, 2010
6/14/10 first version presented to design team
6/14/10 connect "show water" control to concentration bar graph
6/14/10 add concentration bar graph, mostly adapted from advanced-acid-base-solutions
6/14/10 hide pH paper and conductivity test features for interviews
6/14/10 fix strong reaction equations
# 0.00.10 (41603) Jun 13, 2010
6/13/10 prevent strength controls from jumping around when slider is hidden
6/13/10 add reaction equations below beaker
6/13/10 pH meter checkbox instead of radio button, on by default
6/13/10 concentration slider tick labels: 0.001 0.01 0.1 1
# 0.00.09 (41585) Jun 12, 2010
6/12/10 dev version to demonstrate progress
6/12/10 make pH meter "on" by default
6/12/10 remove magnifying-glass-prototype from build properties
6/12/10 add drag handler to pH meter, unconstrained vertical dragging, some error in coordinate frame transforms
6/12/10 move origin of PHMeterNode to tip of probe