@@ -1,3 +1,4 @@
+6/17/10 show 2 water molecules above "2H2O" symbol in water reaction equation
 6/17/10 change strength range: 1e-10 to 1e2
 6/17/10 change concentration units from "M" to "mol/L"
 6/15/10 set a background color for the control panel
